--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
 </head>
 <body>
 
+  <!-- NAVIGATION BAR -->
+  <nav class="navbar">
+    <div class="nav-container">
+      <div class="nav-logo">SIN</div>
+      <button class="nav-toggle" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <ul class="nav-menu">
+        <li><a href="#about">About</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#" class="download-btn" id="download-cv">Download CV</a></li>
+      </ul>
+    </div>
+  </nav>
+
   <!-- HEADER -->
   <header class="header">
     <img src="profile_pic.jpeg" alt="Samuel Inkoom Ninson" class="profile-img">
@@ -24,7 +44,7 @@
   </header>
 
   <!-- PROFESSIONAL SUMMARY -->
-  <section>
+  <section id="about">
     <h2>Professional Summary</h2>
     <p>
       Motivated Management Information Systems student at Ashesi University with strong interests in
@@ -37,7 +57,7 @@
   </section>
 
   <!-- EDUCATION -->
-  <section>
+  <section id="education">
     <h2>Education</h2>
 
     <div class="card">
@@ -54,7 +74,7 @@
   </section>
 
   <!-- ACHIEVEMENTS -->
-  <section>
+  <section id="achievements">
     <h2>Achievements & Awards</h2>
     <ul>
       <li>Scholarship for Impact Program – Ashesi University (2022 – 2026)</li>
@@ -63,7 +83,7 @@
   </section>
 
   <!-- WORK EXPERIENCE -->
-  <section>
+  <section id="experience">
     <h2>Work Experience</h2>
 
     <div class="card">
@@ -115,7 +135,7 @@
   </section>
 
   <!-- PROJECTS -->
-  <section>
+  <section id="projects">
     <h2>Personal Projects</h2>
 
     <div class="card">
@@ -141,7 +161,7 @@
   </section>
 
   <!-- SKILLS -->
-  <section>
+  <section id="skills">
     <h2>Skills</h2>
 
     <h3>Technical Skills</h3>
@@ -175,5 +195,6 @@
     <p>© 2026 Samuel Inkoom Ninson</p>
   </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
