--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- HEADER -->
   <header class="header">
     <img src="profile_pic.jpeg" alt="Samuel Inkoom Ninson" class="profile-img">
-    <!-- Replace image path above -->
+    
 
     <h1>Samuel Inkoom Ninson</h1>
     <p class="subtitle">Management Information Systems Student | Aspiring IT & Data Professional</p>
@@ -50,8 +50,8 @@
       Motivated Management Information Systems student at Ashesi University with strong interests in
       IT support, data analysis, systems analysis, and digital solutions. Experienced in real-world
       operational environments, job simulations with global firms, and building technology-driven
-      platforms that improve efficiency, visibility, and decision-making. Seeking a National Service
-      placement where I can apply technical, analytical, and problem-solving skills while gaining
+      platforms that improve efficiency, visibility, and decision-making. Seeking to work in an environment
+      where I can apply technical, analytical, and problem-solving skills while gaining
       hands-on industry experience.
     </p>
   </section>
@@ -67,9 +67,9 @@
     </div>
 
     <div class="card">
-      <h3>Accra Academy – Accra, Ghana</h3>
+      <h3>Accra Academy – Kaneshie, Ghana</h3>
       <p>Business (WASSCE)</p>
-      <p>Sept 2018 – Sept 2021</p>
+      <p>Nov 2018 – Oct 2021</p>
     </div>
   </section>
 
@@ -77,7 +77,7 @@
   <section id="achievements">
     <h2>Achievements & Awards</h2>
     <ul>
-      <li>Scholarship for Impact Program – Ashesi University (2022 – 2026)</li>
+      <li>Scholarship for Impact Program – Ashesi University (Sept 2022 –  June 2026)</li>
       <li>Dean’s List Honors – Ashesi University (Sept 2023 – Dec 2023)</li>
     </ul>
   </section>
@@ -101,10 +101,10 @@
 
   <!-- JOB SIMULATIONS -->
   <section>
-    <h2>Job Simulations & Virtual Experience</h2>
+    <h2>Virtual Experience</h2>
 
     <div class="card">
-      <h3>Quantium Job Simulation</h3>
+      <h3>Quantium,Australia – Forage</h3>
       <p><em>Data Analyst</em> | Dec 2025 – Jan 2026</p>
       <ul>
         <li>Built an end-to-end analytics workflow in R including data cleaning, feature extraction, EDA, visualization, and statistical testing.</li>
@@ -115,7 +115,7 @@
     </div>
 
     <div class="card">
-      <h3>Goldman Sachs Operations Job Simulation – USA</h3>
+      <h3>Goldman Sachs Operations,USA – Forage</h3>
       <p><em>Operations Analyst</em> | July 2024 – Aug 2024</p>
       <ul>
         <li>Analyzed financial data to identify issues in trade settlements and asset transfers.</li>
@@ -124,7 +124,7 @@
     </div>
 
     <div class="card">
-      <h3>KPMG Audit Job Simulation – Forage</h3>
+      <h3>KPMG Audit,UK – Forage</h3>
       <p><em>Career Catalyst</em> | July 2024 – Aug 2024</p>
       <ul>
         <li>Conducted an audit simulation for a hypothetical client, Ashbourne Industries.</li>
@@ -150,11 +150,13 @@
     </div>
 
     <div class="card">
-      <img src="images/scoutme.png" alt="ScoutMe Project">
+      
       <h3>ScoutMe – Mobile Talent Discovery Platform</h3>
       <p><em>Developer</em> | Sept 2025 – Present</p>
       <ul>
-        <li>Developed a mobile-based platform enabling African footballers to showcase verified profiles and performance videos.</li>
+        <li>Developing a mobile-based platform enabling African footballers to showcase verified profiles and performance videos.</li>
+        <li>Incorporated AI video verification and performance analytics to enhance talent discovery.</li>
+        <li>Acting as the project lead, coordinating development, research and stakeholder engagement.</li>
       </ul>
     </div>
 
@@ -169,19 +171,23 @@
       <li>Programming: Python, Java, R, JavaScript, HTML, CSS, PHP</li>
       <li>Databases: MySQL, MongoDB, Neo4j</li>
       <li>Networking & Security: Wireshark, Zenmap, Cisco Packet Tracer</li>
+      <li>Data Analysis & Visualization: Excel, Tableau, Power BI</li>
+      <li>Software & Tools: Git, VS Code, Jupyter, RStudio,
     </ul>
 
     <h3>Professional Skills</h3>
     <ul>
       <li>Data Analysis & Visualization</li>
-      <li>Systems Analysis & Design</li>
+      <li>Graphic Designing : Canva,Adobe Photoshop</li>
+      <li>Systems Analysis,Design and Reporting</li>
       <li>IT Support & Diagnostics</li>
       <li>Project Management (Project Libre, Microsoft Project, Notion)</li>
-      <li>Customer Management Systems</li>
+      <li>Customer Management</li>
     </ul>
 
     <h3>Soft Skills</h3>
     <ul>
+      <li>Leadership</li>
       <li>Problem Solving</li>
       <li>Communication</li>
       <li>Teamwork & Collaboration</li>
