--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="#experience">Experience</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#skills">Skills</a></li>
-        <li><a href="#" class="download-btn" id="download-cv">Download CV</a></li>
+        <li><a href="Samuel_Ninson_MasterCV.pdf" class="download-btn" id="download-cv">Download CV</a></li>
       </ul>
     </div>
   </nav>
@@ -31,7 +31,7 @@
   <!-- HEADER -->
   <header class="header">
     <img src="profile_pic.jpeg" alt="Samuel Inkoom Ninson" class="profile-img">
-    
+    <a href="Samuel_Ninson_MasterCV.pdf" class="download-btn" id="download-cv">Download CV</a>
 
     <h1>Samuel Inkoom Ninson</h1>
     <p class="subtitle">Management Information Systems Student | Aspiring IT & Data Professional</p>
